# pomni

./: .gitignore  README.md  eval_model.py  finetune_gemini.py  pyproject.toml  utils.py
data/: 500_documented_commits.json  so_jax_qa_pairs.json
scripts/: commits_jax.py  qa_jax_issues.py  scrape_docstrings.py  scrape_stack_overflow.py
